<resources>
    <string name="app_name">Countdown</string>

    <string name="loading">Loading…</string>

    <string name="email">Enter email</string>
    <string name="password">Enter password</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="login">Login</string>
    <string name="signUp">SignUp</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="invalidCredentials">Invalid credentials</string>
    <string name="invalidEmail">Invalid email address</string>
    <string name="invalidPassword">Must contain at least 6 characters</string>

    <string name="emailVerificationSent">Check your email for verification message</string>
    <string name="passwordResetSent">Check your email for password reset message</string>
    <string name="registerFirst">Must check email verification message first</string>

    <string name="signUpFailed">Couldn\'t sign up</string>
    <string name="loginFailed">Couldn\'t login</string>
    <string name="emailVerificationFailed">Couldn\'t send email verification</string>
    <string name="passwordResetFailed">Couldn\'t send password reset</string>

    <string name="optionsMenuItemDeleteAccount">Delete account</string>

    <string name="newEvent">New event</string>

    <string name="title">Title</string>
    <string name="details">Details</string>
    <string name="tsi">Start (YYYY-MM-DD HH:MM)</string>
    <string name="tsf">End (YYYY-MM-DD HH:MM)</string>
    <string name="share">Share with… (emails separated by ,)</string>
    <string name="image">Add image</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <string name="details_tsi">Start</string>
    <string name="details_tsf">End</string>
    <string name="remaining">Remaining time</string>
    <string name="dismiss">Dismiss</string>
    <string name="day">d</string>
    <string name="hour">h</string>
</resources>
