<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.tsilva.countdown.modules.editPost.viewModel.EditPostViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/regularPaddingSize"
            android:paddingTop="@dimen/regularPaddingSize"
            android:paddingRight="@dimen/regularPaddingSize"
            android:paddingBottom="@dimen/regularPaddingSize"
            android:orientation="vertical"
            android:gravity="center" >

            <RelativeLayout
                android:layout_weight="0.6"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@{viewModel.editPostObservables.imageViewDrawable}"
                    android:layout_marginBottom="@dimen/regularPaddingSize"
                    android:windowSoftInputMode="adjustNothing"
                    tools:src="@color/colorPrimary" />

            </RelativeLayout>

            <ScrollView
                android:layout_weight="0.4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                tools:visibility="visible">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        style="@style/regularEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/title"
                        android:text="@={viewModel.editPostObservables.titleTextContent}"
                        android:gravity="center" >

                        <requestFocus />

                    </EditText>

                    <EditText
                        style="@style/regularEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:minLines="4"
                        android:hint="@string/details"
                        android:text="@={viewModel.editPostObservables.detailsTextContent}"
                        android:gravity="center|bottom" />

                    <EditText
                        style="@style/regularEditTextStyle"
                        android:id="@+id/editTextTsi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="datetime"
                        android:maxLength="16"
                        android:hint="@string/tsi"
                        android:text="@{viewModel.editPostObservables.tsiTextContent}"
                        android:gravity="center"
                        android:addTextChangedListener="@{viewModel.setStartDateTimeTextWatcher()}" />

                    <EditText
                        style="@style/regularEditTextStyle"
                        android:id="@+id/editTextTsf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="datetime"
                        android:maxLength="16"
                        android:hint="@string/tsf"
                        android:text="@{viewModel.editPostObservables.tsfTextContent}"
                        android:gravity="center"
                        android:addTextChangedListener="@{viewModel.setEndDateTimeTextWatcher()}" />

                    <EditText
                        style="@style/regularEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/share"
                        android:text="@={viewModel.editPostObservables.shareTextContent}"
                        android:gravity="center" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:visibility="visible" >

                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/image"
                            android:textSize="@dimen/regularTextSize"
                            android:enabled="true"
                            android:onClick="@{viewModel::onImageClick}" />

                        <Button
                            android:layout_weight="1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/confirm"
                            android:textSize="@dimen/regularTextSize"
                            android:onClick="@{viewModel::onConfirmClick}" />

                    </LinearLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:textSize="@dimen/regularTextSize"
                        android:onClick="@{viewModel::onCancelClick}" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </RelativeLayout>

</layout>